fixed background positioning on mobile

--- a/stylus/require/components.styl
+++ b/stylus/require/components.styl
@@ -231,6 +231,9 @@ body
         letter-spacing 0.1em
 
 @media all and (max-width:979px)
+    .wt_banner, .wt_form-banner
+        background-attachment: initial !important;
+
     .wt_banner-message,
     .wt_form-banner-message
         h1
